[package]
name = "say-hello-lib-inoy"
version = "0.2.0"
edition = "2024"
description = "A library for saying hello and goodbye"
license = "MIT"
authors = ["Inoy <inoy@inoy.id>"]
homepage = "https://github.com/inoy/say-hello-lib"
repository = "https://github.com/inoy/say-hello-lib"
author = "Inoy <inoy@inoy.id>"

[dependencies]
